Fixes for linters

--- a/PWGMM/Rivet/doc/presentation/intro.tex
+++ b/PWGMM/Rivet/doc/presentation/intro.tex
@@ -300,7 +300,7 @@
       \vspace*{1ex} \uncover<3->{
         %% Linter wants space before parenthesis - may be entirely
         %% wrong here. 
-        \tikz[baseline={ (0,-.1)}]{\draw[con,dashed](0,0) -- (.4,0);} not
+        \tikz[baseline={ (0,-.1)}]{\draw[con,dashed] (0,0) to (.4,0);} not
         available in \texttt{o2-aod-mc-producer-workflow}, but
         somewhat with \texttt{o2-sim-mctracks-to-aod}.\newline%
         {\footnotesize Relevant \Otwo{} merge requests:
